[package]
name = "embassy-rp-skeleton"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9", features = ["defmt", "nightly"] }
embassy-executor = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9", features = ["defmt", "integrated-timers", "nightly"] }
embassy-time = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9", features = ["defmt", "defmt-timestamp-uptime", "nightly"] }
embassy-rp = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "nightly"] }
embassy-usb = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9", features = ["defmt"] }
embassy-net = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "pool-16", "nightly"] }
embassy-futures = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9" }
embassy-usb-logger = { git = "https://github.com/fluffware/embassy.git", rev = "488e3224783abe07b2be8046642fd9b81f5714b9" }

defmt = "0.3"
defmt-rtt = "0.3"
pio = "0.2"
pio-proc = "0.2"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = "0.2.0-alpha.0"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "1.0.0"
log = "0.4"

[profile.release]
debug = true

[patch.crates-io]
pio = {git = "https://github.com/rp-rs/pio-rs.git"}